# ros2_so_arm100

./: .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: build_and_test.yaml  format.yaml
so_arm100_description/: CMakeLists.txt  package.xml
so_arm100_description/control/: ros2_controllers.yaml  so_arm100.ros2_control.xacro
so_arm100_description/hooks/: so_arm100_description.dsv.in
so_arm100_description/launch/: controllers_bringup.launch.py
so_arm100_description/mjcf/: scene.xml  so_arm100.xml
so_arm100_description/models/so_arm100_description/: model.config  model.sdf
so_arm100_description/rviz/: config.rviz
so_arm100_description/urdf/: so_arm100.urdf.xacro  so_arm100_macro.xacro
so_arm100_moveit_config/: .setup_assistant  package.xml
so_arm100_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml  so_100arm.srdf  so_arm100.srdf  trajectory_execution.yaml
so_arm100_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py
so_arm100_moveit_config/rviz/: move_group.rviz
so_arm101_description/: CMakeLists.txt  package.xml
so_arm101_description/control/: so_arm101.ros2_control.xacro
so_arm101_description/launch/: controllers_bringup.launch.py  view_description.launch.py
so_arm101_description/mjcf/: so_arm101.xml
so_arm101_description/rviz/: config.rviz
so_arm101_description/so_arm101_description/: constants.py  launch_utils.py
so_arm101_description/urdf/: so_arm101.urdf.xacro  so_arm101_macro.xacro
so_arm_gz/: CMakeLists.txt  README.md  package.xml
so_arm_gz/launch/: so_arm_gz_bringup.launch.py
so_arm_utils/: CMakeLists.txt  package.xml
so_arm_utils/so_arm_utils/: constants.py  launch_utils.py
